k8s-yaml/eloan-test/eloan-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: eloan-test
  name: eloan-test
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eloan-test
  template:
    metadata:
      labels:
        app: eloan-test
    spec:
      containers:
      - image: 192.168.11.53:8082/eloan-test:T2
        imagePullPolicy: IfNotPresent
        name: eloan-test
        ports:
        - containerPort: 8080
          hostPort: 8899
          name: eloan-test
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/local/tomcat/logs
          name: eloan-portal-log
      restartPolicy: Always
      volumes:
      - hostPath:
          path: /app/logs/eloan-portal
        name: eloan-portal-log
