k8s-yaml/eloan-test/default-http-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: default-http-backend
  name: default-http-backend
  namespace: prod
spec:
  clusterIP: 10.254.58.175
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: default-http-backend
  type: ClusterIP
