k8s-yaml/eloan-test/eloan-test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: eloan-test-service
  namespace: prod
spec:
  clusterIP: 10.254.11.17
  ports:
  - name: eloan-test-service
    nodePort: 31111
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: eloan-test
  type: NodePort
